...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Settings-->
        <scene sceneID="Hmu-86-lSb">
            <objects>
                <tableViewController title="Settings" id="qej-qL-dXh" customClass="SettingsViewController" customModule="LogoEat" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xfj-L8-3Nd">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <sections>
                            <tableViewSection id="y3n-uI-XCC">
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nti-fT-XqR" id="DwJ-Kv-Tzp">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nen-Rs-0Cv">
                                                    <rect key="frame" x="30" y="0.0" width="384" height="60"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="change-phone"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                    <state key="normal" title="Change phone number">
                                                        <color key="titleColor" systemColor="labelColor"/>
                                                    </state>
                                                    <connections>
                                                        <segue destination="uXl-vK-tgE" kind="presentation" identifier="phoneSegue" modalTransitionStyle="flipHorizontal" id="9PV-Qe-8M1"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgq-h7-hrg">
                                        <rect key="frame" x="37.5" y="182" width="165" height="30"/>
                                        <color key="backgroundColor" red="0.5462213159" green="0.69183468820000005" blue="0.61175662279999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="confirm"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="165" id="bY3-jL-90y"/>
                                        </constraints>
                                        <state key="normal" title="Confirm">
                                            <color key="titleColor" systemColor="systemBackgroundColor"/>
                                        </state>
                                    </button>
                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter smth valid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sn3-B6-LvO">
                                        <rect key="frame" x="58.5" y="142" width="123" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="change-error"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.83555814719999999" green="0.50561495440000004" blue="0.47103464610000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
